--- a/GemsStudent/app/src/main/res/layout/activity_attendance.xml
+++ b/GemsStudent/app/src/main/res/layout/activity_attendance.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.guha.gemsstudent.MainActivity"
-    tools:showIn="@layout/content_main">
+    tools:context="com.example.guha.gemsstudent.Attendance">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -22,7 +21,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main" />
+    <include layout="@layout/content_attendance" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
@@ -31,11 +30,5 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         android:src="@android:drawable/ic_dialog_email" />
-
-
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"></FrameLayout>
 
 </android.support.design.widget.CoordinatorLayout>
